--- a/PokemonGo+/Base.lproj/Main.storyboard
+++ b/PokemonGo+/Base.lproj/Main.storyboard
@@ -87,14 +87,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="pokeCell" id="Anz-dO-TCH" customClass="PokeCell" customModule="PokemonGo_" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.90000000000000002" contentMode="center" reuseIdentifier="pokeCell" id="Anz-dO-TCH" customClass="PokeCell" customModule="PokemonGo_" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="65" height="75"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="65" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="0Lh-ND-PdO">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Lh-ND-PdO">
                                                     <rect key="frame" x="0.0" y="0.0" width="65" height="60"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="YlO-G0-cnf"/>
@@ -112,6 +112,7 @@
                                                 </label>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="ANb-OC-SE7" firstAttribute="top" secondItem="0Lh-ND-PdO" secondAttribute="bottom" id="2gL-qf-Egs"/>
                                             <constraint firstItem="0Lh-ND-PdO" firstAttribute="leading" secondItem="Anz-dO-TCH" secondAttribute="leading" id="F2i-vi-N1y"/>
@@ -159,6 +160,7 @@
                     <connections>
                         <outlet property="collection" destination="0qX-1Y-L76" id="SlY-YP-Ozc"/>
                         <outlet property="searchbar" destination="xSh-6J-cDf" id="yTL-gO-LUU"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="fromSecondViewController" id="e1P-6g-r4W"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w67-W3-mPM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -167,7 +169,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1" width="120" height="120"/>
         <image name="pokeball" width="97" height="96"/>
         <image name="pokemon" width="736" height="1051"/>
     </resources>
