--- a/PokemonGo+/Main.storyboard
+++ b/PokemonGo+/Main.storyboard
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="pokemon.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -69,8 +74,22 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I0V-IV-YUL">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rra-zy-0td">
+                                        <rect key="frame" x="112.5" y="11" width="95" height="28"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28" id="Em2-j0-FEi"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="25"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="Rra-zy-0td" firstAttribute="centerX" secondItem="I0V-IV-YUL" secondAttribute="centerX" id="Hzv-48-5qI"/>
+                                    <constraint firstItem="Rra-zy-0td" firstAttribute="top" secondItem="I0V-IV-YUL" secondAttribute="top" constant="11" id="JzA-l6-k9e"/>
+                                    <constraint firstAttribute="bottom" secondItem="Rra-zy-0td" secondAttribute="bottom" constant="11" id="YyG-LT-kGa"/>
                                     <constraint firstAttribute="height" constant="50" id="g6U-XJ-2Sb"/>
                                 </constraints>
                             </view>
@@ -160,7 +179,6 @@
                     <connections>
                         <outlet property="collection" destination="0qX-1Y-L76" id="SlY-YP-Ozc"/>
                         <outlet property="searchbar" destination="xSh-6J-cDf" id="yTL-gO-LUU"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="fromSecondViewController" id="e1P-6g-r4W"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w67-W3-mPM" userLabel="First Responder" sceneMemberID="firstResponder"/>
